syntax = "proto3";

package basketspb;
option go_package = "github.com/rezaAmiri123/microservice/baskets/basketspb";

//import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "basket Service API";
    version: "1.0";
    contact: {
      name: "Basket service";
      url: "https://github.com/rezaAmiri123/microservice";
      // email: "example@example.com";
    };
  };
};

service BasketService {
  rpc StartBasket(StartBasketRequest) returns (StartBasketResponse) {
    option (google.api.http) = {
      post: "/v1/start_basket"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Use this API to start a new basket";
      summary: "Create new basket";
    };
  };
  rpc CancelBasket(CancelBasketRequest) returns (CancelBasketResponse) {};
  rpc CheckoutBasket(CheckoutBasketRequest) returns (CheckoutBasketResponse) {
    option (google.api.http) = {
      post: "/v1/checkout_basket"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Use this API to checkout a basket";
      summary: "checkout a basket";
    };
  };
  rpc AddItem(AddItemRequest) returns (AddItemResponse) {
    option (google.api.http) = {
      post: "/v1/add_item"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Use this API to add a new item";
      summary: "Create new item";
    };
  };
  rpc RemoveItem(RemoveItemRequest) returns (RemoveItemResponse) {};
  rpc GetBasket(GetBasketRequest) returns (GetBasketResponse) {};
}

message Basket {
  string id = 1;
  repeated Item items = 2;
}

message Item {
  string store_id = 1;
  string product_id = 2;
  string store_name = 3;
  string product_name = 4;
  double product_price = 5;
  int32 quantity = 6;
}

message StartBasketRequest {
  string user_id = 1;
}

message StartBasketResponse {
  string id = 1;
}

message CancelBasketRequest {
  string id = 1;
}

message CancelBasketResponse {}

message CheckoutBasketRequest {
  string id = 1;
  string payment_id = 2;
}

message CheckoutBasketResponse {}

message AddItemRequest {
  string id = 1;
  string product_id = 3;
  int32 quantity = 4;
}

message AddItemResponse {}

message RemoveItemRequest {
  string id = 1;
  string product_id = 3;
  int32 quantity = 4;
}

message RemoveItemResponse {}

message GetBasketRequest {
  string id = 1;
}

message GetBasketResponse {
  Basket basket = 1;
}
